--- a/auth_service/templates/reset_email.html
+++ b/auth_service/templates/reset_email.html
@@ -65,7 +65,7 @@
         <div class="col">
           <div class="card">
             <div class="card-header">
-              <h5>Confirm Reset Password</h5>
+              <h3>CONFIRM</h3>
             </div>
             <div class="card-body">
               <form method="post" action="/forgot-password">
