--- a/auth_service/templates/reset.html
+++ b/auth_service/templates/reset.html
@@ -58,7 +58,7 @@
         <div class="col">
           <div class="card">
             <div class="card-header">
-              <h3>Reset Password</h3>
+              <h3>RESET</h3>
             </div>
             <div class="card-body">
               <form method="post">
